[FIX] subscription error message is too close in footer

--- a/dev/styles/main/plugins/newsLetterSubscription.less
+++ b/dev/styles/main/plugins/newsLetterSubscription.less
@@ -2,7 +2,7 @@
 // === News Letter Subscription=============
 // =================================
 .footer__subscribe .alert{
-    width: 70%;
+    width: 66%;
 }
 
 .footer__subscribe .form-control {
